--- a/src/Ajf.LogFileWatcher.Models/Ajf.LogFileWatcher.Models.csproj
+++ b/src/Ajf.LogFileWatcher.Models/Ajf.LogFileWatcher.Models.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{56A5C031-78D3-4F88-92E3-0B7122F0415E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LogFileWatcher.Models</RootNamespace>
-    <AssemblyName>LogFileWatcher.Models</AssemblyName>
+    <RootNamespace>Ajf.LogFileWatcher.Models</RootNamespace>
+    <AssemblyName>Ajf.LogFileWatcher.Models</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
