--- a/src/Ajf.LogFileWatcher.Service/Ajf.LogFileWatcher.Service.csproj
+++ b/src/Ajf.LogFileWatcher.Service/Ajf.LogFileWatcher.Service.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{BB1FA9A3-1399-4795-996E-8C9CE2429F46}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>LogFileWatcher.Service</RootNamespace>
-    <AssemblyName>LogFileWatcher.Service</AssemblyName>
+    <RootNamespace>Ajf.LogFileWatcher.Service</RootNamespace>
+    <AssemblyName>Ajf.LogFileWatcher.Service</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
