--- a/src/Ajf.LogFileWatcher.Service/packages.config
+++ b/src/Ajf.LogFileWatcher.Service/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="OctoPack" version="3.6.3" targetFramework="net47" developmentDependency="true" />
   <package id="Serilog" version="2.5.0" targetFramework="net47" />
   <package id="Serilog.Settings.AppSettings" version="2.1.2" targetFramework="net47" />
   <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="net47" />
