--- a/src/Ajf.LogFileWatcher.Service/App.config
+++ b/src/Ajf.LogFileWatcher.Service/App.config
@@ -2,8 +2,8 @@
 <configuration>
   <appSettings>
     <!-- Service -->
-    <add key="DisplayName" value="LogWatcher" />
-    <add key="ServiceName" value="LogWatcher" />
+    <add key="DisplayName" value="Ajf.LogWatcher" />
+    <add key="ServiceName" value="Ajf.LogWatcher" />
 
     <!-- Monitoring -->
     <add key="MonitoringTargets" value="c:\logs\pf.log;1;0|c:\logs\pa.log;1;0" />
